# Ros_arm

./: README.md  bash.sh
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/xarm_vision/: CallPickPlaceDemo.h  CallPickPlaceDemoRequest.h  CallPickPlaceDemoResponse.h  HSVColorDetectionConfig.h  SetTFOffsetConfig.h
devel/include/yolov8_ros/: Detection3D.h
devel/lib/pkgconfig/: arm_control.pc  config.pc  my_robot_description.pc  xarm_description.pc  xarm_moveit_config.pc  xarm_moveit_demo.pc  xarm_vision.pc  yolov8_ros.pc  your_package.pc
devel/lib/python2.7/dist-packages/xarm_vision/cfg/: HSVColorDetectionConfig.py  SetTFOffsetConfig.py
devel/lib/python2.7/dist-packages/xarm_vision/srv/: _CallPickPlaceDemo.py  __init__.py
devel/lib/python3/dist-packages/yolov8_ros/msg/: _Detection3D.py  __init__.py
devel/lib/xarm_moveit_demo/: moveit_arcline_demo  moveit_beeline_demo  moveit_joint_pose_demo  moveit_pick_place_demo  moveit_planning_scene_demo  moveit_pose_demo
devel/lib/xarm_vision/: color_detection_demo  cv_bridge_demo  pick_with_AR_server
devel/lib/yolov8_ros/: detector_onnx.py
devel/share/arm_control/cmake/: arm_controlConfig.cmake
devel/share/common-lisp/ros/xarm_vision/srv/: CallPickPlaceDemo.lisp  _package.lisp  _package_CallPickPlaceDemo.lisp  xarm_vision-srv.asd
devel/share/common-lisp/ros/yolov8_ros/msg/: Detection3D.lisp  _package.lisp  _package_Detection3D.lisp  yolov8_ros-msg.asd
devel/share/config/cmake/: configConfig.cmake
devel/share/gennodejs/ros/xarm_vision/srv/: CallPickPlaceDemo.js  _index.js
devel/share/gennodejs/ros/yolov8_ros/msg/: Detection3D.js  _index.js
devel/share/my_robot_description/cmake/: my_robot_descriptionConfig.cmake
devel/share/roseus/ros/xarm_moveit_demo/: manifest.l
devel/share/roseus/ros/xarm_vision/: manifest.l
devel/share/roseus/ros/yolov8_ros/: manifest.l
devel/share/xarm_description/cmake/: xarm_descriptionConfig.cmake
devel/share/xarm_moveit_config/cmake/: xarm_moveit_configConfig.cmake
devel/share/xarm_moveit_demo/cmake/: xarm_moveit_demo-msg-paths.cmake  xarm_moveit_demoConfig.cmake
devel/share/xarm_vision/cmake/: xarm_vision-msg-extras.cmake  xarm_vision-msg-paths.cmake  xarm_visionConfig.cmake
devel/share/xarm_vision/docs/: HSVColorDetectionConfig-usage.dox  HSVColorDetectionConfig.dox  HSVColorDetectionConfig.wikidoc  SetTFOffsetConfig-usage.dox  SetTFOffsetConfig.dox  SetTFOffsetConfig.wikidoc
devel/share/yolov8_ros/cmake/: yolov8_ros-msg-paths.cmake  yolov8_rosConfig.cmake
devel/share/your_package/cmake/: your_packageConfig.cmake
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/launch/: moveit_control.launch
src/arm_control/scripts/: visual_grasping.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: display.launch
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/ros_moveit_config/: .setup_assistant
src/ros_moveit_config/config/: arm.srdf
src/ros_moveit_config/launch/: gazebo.launch  planning_context.launch  sensor_manager.launch.xml
src/yolov8_ros/: CMakeLists.txt  package.xml
src/yolov8_ros/config/: yolov8.yaml
src/yolov8_ros/launch/: yolov8.launch  yolov8_onnx.launch
src/yolov8_ros/msg/: Detection3D.msg
src/yolov8_ros/scripts/: detector_onnx.py
(+2 files in other folders)
